Changes towards version 0.7:
- Experimental support for Symbian S60 3rd edition - Mika & SvdB
- Pthread support - Mika
- Content Dirs completely reorganized; 3DO and PC segregation - Coredev
- Voiceovers controlled by a synthetic '3dovoice' addon - Michael
- CONVERSATION explicitly names text/voice/timestamps - Michael
- Replaced stricmp() by the POSIX compatible strcasecmp() - SvdB
- Split STRTAB further into STRTAB and CONVERSATION - Michael
- INT32, BOOLEAN, and STRING resource types - Michael
- UNKNOWNRES is now safe to load, and "loads" as its resvalue - Michael
- CODE is now SHIP, and uses an integer descriptor instead of a one-byte
  .cod file - Michael
- ResourceLoadFun is now descriptor-based, not stream-based - Michael
- Removed RES_TYPE enum, folded into ResourceDesc - Michael
- Split STRTAB into STRTAB (strings) and BINTAB (color/xlat tables) - Michael
- Removed internal references to defunct resource types - Michael
- Revamped resource system to only use .rmp files - Michael
- Isolated all constructed resources into cons_res.c - Michael
- Fixed a crash when conversing with music disabled - Michael
- Moved all resources into starcon.ls2 - Michael
- Fixed compile errors when compiling without joystick support - Michael
- Added endian-aware integer read functions to uio - SvdB
- Introduce the concept of an "InputContext" - SvdB
- Don't use alloca() in uio. - SvdB
- Replace PlayerOne/PlayerTwo by PlayerControls[0]/PlayerControls[1] - SvdB
- Moved comm resources into starcon.ls2 - Michael
- Repackaged static comm/ship data to it all uniquely named - Michael
- On MacOS X, search for the content in the application bundle, from Nic
- Planetside resource names are now consistent and generatable - Michael
- Androsynth ruins freeing condition now uses cycles (Bug #1028) - Michael
- .rmp files now carry the types of the targets - Michael
- Joystick threshold defaults to 10,000, not 0 (Bug #1046) - Michael